--- a/NewSocket/NewSocket.csproj
+++ b/NewSocket/NewSocket.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netstandard2.0;net48</TargetFrameworks>
+    <TargetFrameworks>net5.0;netstandard2.0;net48;netcoreapp3.1</TargetFrameworks>
 	<Nullable>enable</Nullable>
 	<WarningsAsErrors>nullable</WarningsAsErrors>
 	<LangVersion>9.0</LangVersion>
